processed/gerrit/txt/43711.txt
Change:     43711
Subject:    LU-14093 utils: fix format-overflow warning
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/43711
Change-Id:  I021e6ffff2e1405eadbe689f718674af4d4d6376
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Dominique Martinet
Created:    2021-05-15 22:38:28.000000000
Updated:    2021-06-14 16:43:51.000000000
Patch Set:  3
Insertions: +2
Deletions:  -2
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Neil Brown: +1; Andreas Dilger: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, James Simmons, Sergey Cheremencev, Dominique Martinet, Neil Brown

--- Commit Message ---
LU-14093 utils: fix format-overflow warning

Fix the following warning on gcc11 by making numbuf big enough to fit
format content.

lfs.c: In function ‘print_quota’:
lfs.c:7719:48: error: ‘sprintf’ may write a terminating nul past the end of the destination [-Werror=format-overflow=]
 7719 |                         sprintf(numbuf[0], "%s*", strbuf);
      |                                                ^
lfs.c:7719:25: note: ‘sprintf’ output between 2 and 33 bytes into a destination of size 32
 7719 |                         sprintf(numbuf[0], "%s*", strbuf);
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Test-parameters: trivial

Change-Id: I021e6ffff2e1405eadbe689f718674af4d4d6376
Signed-off-by: Dominique Martinet <asmadeus@codewreck.org>
Reviewed-on: https://review.whamcloud.com/43711
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Neil Brown <neilb@suse.de>

--- Review History ---

--- Message (Dominique Martinet, 2021-05-15 22:38:28.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2021-05-15 22:39:22.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2021-05-15 23:26:33.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/20748/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/80814/ : SUCCESS

--- Message (Andreas Dilger, 2021-05-20 03:03:14.000000000) ---
Patch Set 1: Code-Review+1

--- Message (James Simmons, 2021-05-22 12:51:00.000000000) ---
Patch Set 1: Code-Review+1

That is a real bug.

--- Message (Andreas Dilger, 2021-05-22 17:23:53.000000000) ---
Patch Set 1: Code-Review-1

> That is a real bug.

I'm not actually sure how it would be triggered. You'd need to have a quota limit that is at least 30 bytes long when printed, but a 2^64-byte number is only going to be 20 characters long, plus the [] and maybe * to mark over quota and a NUL makes 24 chars. 

It is probably unhappy because strbuf[32] could theoretically hold up to 31 chars+NUL (even though it could only really be 20+1), so adding the []* could push it over?

Probably the more correct solution is to declare strbuf[MAX_STRBUF-4] to quiet the compiler, and also use a bit less memory on the stack.

--- Message (Andreas Dilger, 2021-05-22 17:32:57.000000000) ---
Patch Set 2: Published edit on patch set 1.

--- Message (Andreas Dilger, 2021-05-22 17:33:10.000000000) ---
Patch Set 2: Code-Review+2

--- Message (wc-checkpatch, 2021-05-22 17:33:17.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2021-05-22 18:07:48.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/20855/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/80923/ : SUCCESS

--- Message (Dominique Martinet, 2021-05-23 00:26:57.000000000) ---
Patch Set 2:

Works for me, I agree we could never have overflowed 30 bytes in practice (gcc is either too clever or not enough on these warnings..), but didn't have the will to look further :)
Thanks for optimizing!

--- Message (James Simmons, 2021-06-05 22:38:57.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Neil Brown, 2021-06-07 00:27:20.000000000) ---
Patch Set 2: Code-Review+1

--- Message (unknown, 2021-06-14 16:43:51.000000000) ---
Change has been successfully cherry-picked as a0fe9be254b944f5b005dd4b36c414827bcb40df by Oleg Drokin
